--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <div id="Container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="Post">
             <h1>
                 Este e sel titulo atractivo e interesante del post
