--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="Container">
         <div id="cabecera">
-            Hyperblog <span id="Tagline">Tu blog de confianza</span>
+            Hyperblog <span id="Tagline">Tu blog de cabecera</span>
         </div>
         <div id="Post">
             <h1>
