--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div id="Container">
         <div id="cabecera">
-            Hyperblog <span id="Tagline">Tu blog de confianza</span>
+            Hyperblog <span id="Tagline">Tu blog maestro</span>
         </div>
         <div id="Post">
             <h1>
@@ -21,6 +21,9 @@
                 Los blog son la mejor forma de compartir informacion y tus ideas mucho 
                 mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar.
                 Pero estadisticamente no lo eres... por ahora.
+            </p>
+            <p>
+                Suscribete y dale like
             </p>
         </div>
     </div>
